@@ -1,58 +1,41 @@
-package dev.satyrn.wolfgunmusic.forge.data.provider.server;
+package dev.satyrn.wolfgunmusic.neoforge.data.provider.server;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
 import dev.satyrn.wolfgunmusic.data.loot.ModLootTables;
 import dev.satyrn.wolfgunmusic.world.item.ModItems;
-import net.minecraft.data.DataGenerator;
+import net.minecraft.core.HolderLookup;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.data.loot.LootTableSubProvider;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
-import net.minecraft.world.level.storage.loot.entries.LootTableReference;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
+import net.minecraft.world.level.storage.loot.entries.NestedLootTable;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
 import net.minecraft.world.level.storage.loot.providers.number.UniformGenerator;
 
 import java.util.List;
-import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.BiConsumer;
-import java.util.function.Consumer;
 import java.util.function.Supplier;
 
-import static net.minecraft.world.level.storage.loot.LootTable.Builder;
-
 public final class ModLootTableProvider extends LootTableProvider {
-    private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, Builder>>>, LootContextParamSet>> subProviders;
 
-
-    public ModLootTableProvider(DataGenerator generator) {
-        super(generator);
-        this.subProviders = ImmutableList.of(Pair.of(ChestLootModifiers::new, LootContextParamSets.CHEST));
+    public ModLootTableProvider(PackOutput output, CompletableFuture<HolderLookup.Provider> lookupProvider) {
+        super(output, Set.of(), List.of(
+                new LootTableProvider.SubProviderEntry(ChestLootModifiers::new, LootContextParamSets.CHEST)
+        ), lookupProvider);
     }
 
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return this.subProviders;
-    }
+    static final class ChestLootModifiers implements LootTableSubProvider {
+        ChestLootModifiers(HolderLookup.Provider provider) {
+        }
 
-    @Override
-    protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext validationtracker) {
-        // We don't need to validate :3
-    }
-
-    @Override
-    public String getName() {
-        return "Wolfgun Music Discs Loot Table Provider";
-    }
-
-    static final class ChestLootModifiers implements Consumer<BiConsumer<ResourceLocation, Builder>> {
         @Override
-        public void accept(BiConsumer<ResourceLocation, Builder> biConsumer) {
+        public void generate(BiConsumer<ResourceKey<LootTable>, LootTable.Builder> biConsumer) {
             biConsumer.accept(ModLootTables.WOLFGUN_MUSIC_DISCS, LootTable.lootTable()
                     .withPool(poolOf(List.of(ModItems.MUSIC_DISC_AFTER_ANOTHER, ModItems.MUSIC_DISC_BETWEEN_LAYERS,
                             ModItems.MUSIC_DISC_BLACK_DAWN, ModItems.MUSIC_DISC_CLIFF_WHERE,
@@ -79,7 +62,7 @@ public final class ModLootTableProvider extends LootTableProvider {
 
             final LootTable.Builder allDiscsModifierTable = getModifierTable(ModLootTables.WOLFGUN_MUSIC_DISCS);
             final LootTable.Builder runningModifierTable = getModifierTable(ModLootTables.RUNNING_MUSIC_DISCS);
-            final LootTable.Builder running2ModifierTable = getModifierTable(ModLootTables.RUNNING_MUSIC_DISCS);
+            final LootTable.Builder running2ModifierTable = getModifierTable(ModLootTables.RUNNING_II_MUSIC_DISCS);
 
             // Default overlays
             biConsumer.accept(ModLootTables.ANCIENT_CITY_MODIFIER, allDiscsModifierTable);
@@ -95,12 +78,12 @@ public final class ModLootTableProvider extends LootTableProvider {
                     allDiscsModifierTable);
         }
 
-        private LootTable.Builder getModifierTable(ResourceLocation lootTable) {
+        private LootTable.Builder getModifierTable(ResourceKey<LootTable> lootTable) {
             return LootTable.lootTable()
                     .withPool(LootPool.lootPool()
                             .setBonusRolls(ConstantValue.exactly(0.25F))
                             .setRolls(UniformGenerator.between(0.0F, 1.0F))
-                            .add(LootTableReference.lootTableReference(lootTable)));
+                            .add(NestedLootTable.lootTableReference(lootTable)));
         }
 
         private LootPool.Builder poolOf(final List<Supplier<Item>> items) {
